# net-topology

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
.claude/: settings.local.json  settings.local.json.bak
docs/superpowers/plans/: 2026-03-22-network-topology-scanner.md
docs/superpowers/specs/: 2026-03-22-network-topology-scanner-design.md
net_topology/: cli.py  config.py  discovery.py  export.py  models.py  seed.py  snmp.py  topology.py
net_topology/collectors/: base.py  generic.py  mikrotik.py
tests/: test_cli.py  test_config.py  test_discovery.py  test_export.py  test_generic_collector.py  test_mikrotik_collector.py  test_models.py  test_seed.py  test_snmp.py  test_topology.py
